[metadata]
name = pastecat
version = attr: pastecat.__version__
url = https://github.com/atsuoishimoto/pastecat
author = Atsuo Ishimoto
description = Paste clipboard image to file on Windows/macOS.
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License

project_urls =
    Source = https://github.com/atsuoishimoto/pastecat

[options]
python_requires = >=3.7
py_modules = pastecat
include_package_data = true
zip_safe = false

setup_requires =
    wheel
    pillow

install_requires =
    pillow

[options.extras_require]
dev =
    wheel
    black

[options.entry_points]
console_scripts =
    pastecat = pastecat:main


